--- a/static/css/wordSearch.css
+++ b/static/css/wordSearch.css
@@ -7,26 +7,24 @@
 	border-style: solid;
 	border-color:blue;
 	overflow:scroll;
-};
+}
 
 
 #results-count{
 	position:absolute;
-	top:300px;
+	top:80px;
 }
-
 
 .container{
 	position: absolute;
-	height:50px;
+	height:100px;
 	top:100px;
 	left:50px;
 }
-
-#word-search{
+input{
 	position:relative;
 	top:50px;
-
+	width:50px;
 
 }
 
